add cart, login, and signup pages with navigation updates

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             </nav>
             <div class="header-actions">
                 <button class="icon-btn" aria-label="Search"><i class="fas fa-search"></i></button>
-                <a href="#hero" class="icon-btn" aria-label="Cart">
+                <a href="cart.html" class="icon-btn" aria-label="Cart">
                     <i class="fas fa-shopping-cart"></i>
                     <span class="cart-count">0</span>
                 </a>
-                <a href="#hero" class="icon-btn" aria-label="Account"><i class="fas fa-user"></i></a>
+                <a href="login.html" class="icon-btn" aria-label="Account"><i class="fas fa-user"></i></a>
                 <button class="mobile-toggle" aria-label="Menu"><i class="fas fa-bars"></i></button>
             </div>
         </div>
@@ -87,7 +87,8 @@
                         <div class="product-image">
                             <img class="product-img" src="https://picsum.photos/seed/watch/300/300"
                                 alt="Minimalist Watch">
-                            <button class="add-to-cart-btn"><i class="fas fa-plus"></i></button>
+                            <button class="add-to-cart-btn" aria-label="Add to Cart"><i
+                                    class="fas fa-plus"></i></button>
                         </div>
                         <div class="product-info">
                             <span class="product-category">Accessories</span>
@@ -100,7 +101,8 @@
                         <div class="product-image">
                             <img class="product-img" src="https://picsum.photos/seed/headphones/300/300"
                                 alt="Premium Headphones">
-                            <button class="add-to-cart-btn"><i class="fas fa-plus"></i></button>
+                            <button class="add-to-cart-btn" aria-label="Add to Cart"><i
+                                    class="fas fa-plus"></i></button>
                         </div>
                         <div class="product-info">
                             <span class="product-category">Audio</span>
@@ -112,7 +114,8 @@
                     <article class="product-card">
                         <div class="product-image">
                             <img class="product-img" src="https://picsum.photos/seed/bag/300/300" alt="Leather Bag">
-                            <button class="add-to-cart-btn"><i class="fas fa-plus"></i></button>
+                            <button class="add-to-cart-btn" aria-label="Add to Cart"><i
+                                    class="fas fa-plus"></i></button>
                         </div>
                         <div class="product-info">
                             <span class="product-category">Lifestyle</span>
@@ -125,7 +128,8 @@
                         <div class="product-image">
                             <img class="product-img" src="https://picsum.photos/seed/speaker/300/300"
                                 alt="Smart Speaker">
-                            <button class="add-to-cart-btn"><i class="fas fa-plus"></i></button>
+                            <button class="add-to-cart-btn" aria-label="Add to Cart"><i
+                                    class="fas fa-plus"></i></button>
                         </div>
                         <div class="product-info">
                             <span class="product-category">Tech</span>
