load products from JSON and update cart functionality

--- a/index.html
+++ b/index.html
@@ -82,61 +82,7 @@
                     <p class="section-subtitle">Handpicked for you</p>
                 </div>
                 <div class="product-grid">
-                    <!-- Product 1 -->
-                    <article class="product-card">
-                        <div class="product-image">
-                            <img class="product-img" src="https://picsum.photos/seed/watch/300/300"
-                                alt="Minimalist Watch">
-                            <button class="add-to-cart-btn" aria-label="Add to Cart"><i
-                                    class="fas fa-plus"></i></button>
-                        </div>
-                        <div class="product-info">
-                            <span class="product-category">Accessories</span>
-                            <h3 class="product-title">Minimalist Watch</h3>
-                            <p class="product-price">$199.00</p>
-                        </div>
-                    </article>
-                    <!-- Product 2 -->
-                    <article class="product-card">
-                        <div class="product-image">
-                            <img class="product-img" src="https://picsum.photos/seed/headphones/300/300"
-                                alt="Premium Headphones">
-                            <button class="add-to-cart-btn" aria-label="Add to Cart"><i
-                                    class="fas fa-plus"></i></button>
-                        </div>
-                        <div class="product-info">
-                            <span class="product-category">Audio</span>
-                            <h3 class="product-title">Premium Headphones</h3>
-                            <p class="product-price">$299.00</p>
-                        </div>
-                    </article>
-                    <!-- Product 3 -->
-                    <article class="product-card">
-                        <div class="product-image">
-                            <img class="product-img" src="https://picsum.photos/seed/bag/300/300" alt="Leather Bag">
-                            <button class="add-to-cart-btn" aria-label="Add to Cart"><i
-                                    class="fas fa-plus"></i></button>
-                        </div>
-                        <div class="product-info">
-                            <span class="product-category">Lifestyle</span>
-                            <h3 class="product-title">Leather Bag</h3>
-                            <p class="product-price">$149.00</p>
-                        </div>
-                    </article>
-                    <!-- Product 4 -->
-                    <article class="product-card">
-                        <div class="product-image">
-                            <img class="product-img" src="https://picsum.photos/seed/speaker/300/300"
-                                alt="Smart Speaker">
-                            <button class="add-to-cart-btn" aria-label="Add to Cart"><i
-                                    class="fas fa-plus"></i></button>
-                        </div>
-                        <div class="product-info">
-                            <span class="product-category">Tech</span>
-                            <h3 class="product-title">Smart Speaker</h3>
-                            <p class="product-price">$89.00</p>
-                        </div>
-                    </article>
+                    <!-- Products will be loaded here by script.js -->
                 </div>
             </div>
         </section>
