Add empty cart functionality and search feature to the index page
- Implemented "Empty Cart" button in cart.html
- Enhanced cart.js to include methods for incrementing, decrementing, and emptying the cart
- Added search form in index.html with corresponding styles in style.css
- Updated product rendering logic to support search functionality

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 </ul>
             </nav>
             <div class="header-actions">
-                <button class="icon-btn" aria-label="Search"><i class="fas fa-search"></i></button>
+                <form class="search-form" id="search-form">
+                    <input type="search" id="search-input" placeholder="Search products...">
+                </form>
                 <a href="cart.html" class="icon-btn" aria-label="Cart">
                     <i class="fas fa-shopping-cart"></i>
                     <span class="cart-count">0</span>
