--- a/cart.html
+++ b/cart.html
@@ -71,6 +71,7 @@
                                 <span id="cart-total">$0.00</span>
                             </div>
                             <button class="btn btn-primary checkout-btn">Proceed to Checkout</button>
+                            <button class="btn btn-secondary empty-cart-btn">Empty Cart</button>
                         </div>
                     </div>
                 </div>
