--- a/index.html
+++ b/index.html
@@ -83,8 +83,22 @@
                     <h2 class="section-title">Featured Products</h2>
                     <p class="section-subtitle">Handpicked for you</p>
                 </div>
+                <div class="product-controls">
+                    <label for="items-per-page">Show:</label>
+                    <select id="items-per-page" name="items-per-page">
+                        <option value="6">6</option>
+                        <option value="9" selected>9</option>
+                        <option value="12">12</option>
+                        <option value="18">18</option>
+                        <option value="24">24</option>
+                        <option value="27">27</option>
+                    </select>
+                </div>
                 <div class="product-grid">
                     <!-- Products will be loaded here by script.js -->
+                </div>
+                <div id="pagination-container" class="pagination-container">
+                    <!-- Pagination controls will be loaded here -->
                 </div>
             </div>
         </section>
